<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 the Cook-E development team
  ~
  ~ This file is part of Cook-E.
  ~
  ~ Cook-E is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Cook-E is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Cook-E.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <item type="id" name="test_tag_recipe_list" />
    <item type="id" name="test_tag_meal_list" />
</resources>
