...
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_recipes">Add recipes</string>
    <string name="recipe">Recipe</string>
    <string name="recipe_image">Recipe image</string>
    <string name="delete">Delete</string>
    <string name="meals">Meals</string>
    <string name="recipes">Recipes</string>
    <string name="create_recipe">Create recipe</string>
    <string name="label_continue">Continue</string>
    <string name="website">Website</string>
    <string name="about">About</string>
    <string name="about_heading" translatable="false">Cook-E %1$s (%2$d)</string>
    <string name="about_details" translatable="false"><![CDATA[
...
